Switch to postgres and add migration support
